--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -29,7 +29,8 @@
             </div>
             <div *ngIf="hide" class="flex flex-col justify-center">
               <app-questionnaire
-                [indexOfSectionFromParent]="i"
+                [currentSection]="section"
+                [currentSectionWithoutOptions]="sectionsWithAnswers[i]"
                 (atSummary)="buttonToggler($event)"
                 (adjustWidth)="adjustingWidth($event, i)"
               ></app-questionnaire>
