--- a/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
+++ b/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
@@ -1,7 +1,8 @@
 <div class="flex flex-col justify-center items-center space-y-8">
   <div [hidden]="summary">
     <app-question
-      [indexOfSection]="indexOfSectionFromParent"
+      [currentQuestion]="currentQuestion"
+      [questionToAppendAnswers]="currentQuestionWithoutOptions"
       [indexOfQuestion]="index"
       (ngModel)="(index)"
       (inNext)="nextIsClicked($event)"
@@ -21,7 +22,7 @@
         </div>
         <div class="w-full h-full">
           <app-summary
-            [indexOfSection]="indexOfSectionFromParent"
+            [questionsWithSelectedOptions]="currentSectionWithoutOptions.questions"
           ></app-summary>
         </div>
       </div>
