--- a/frontend/src/app/components/impl/section-stepper/section-stepper.component.html
+++ b/frontend/src/app/components/impl/section-stepper/section-stepper.component.html
@@ -15,7 +15,7 @@
         [sectionColoringValue]="sectionColoring[i]"
         [sectionIcon]="section.icon"
         [sectionName]="section.stepLabel"
-        (sectionChange)="sectionChangeHandler($event)"
+        (sectionChange)="sectionChange($event)"
       ></app-icon>
       <div
         class="flex-1 py-2 text-center"
@@ -48,7 +48,7 @@
       [sectionColoringValue]="true"
       [sectionIcon]="'check_circle_outline'"
       [sectionName]="''"
-      (sectionChange)="sectionChangeHandler($event)"
+      (sectionChange)="sectionChange($event)"
     ></app-icon>
     <div
       class="flex-1 py-2"
@@ -60,4 +60,44 @@
       Finished
     </div>
   </div>
+</div>
+<div class="py-10">
+  <mat-stepper
+    labelPosition="bottom"
+    (selectionChange)="OnStep($event)"
+    [selectedIndex]="selectedIndex"
+    #stepper
+  >
+    <mat-step *ngFor="let section of sections; let i = index">
+      <div class="w-full h-full flex flex-col justify-center">
+        <div *ngIf="!hide" class="flex flex-col flex-wrap justify-center">
+          <app-section-preview-card
+            (onStart)="ToHide()"
+            (onSkip)="switchIt(stepper, $event)"
+            [sectionName]="section.name"
+            [sectionContent]="section.content"
+            [cardStringControl]="cardStringControl"
+            [skipStringControl]="skipStringControl"
+          ></app-section-preview-card>
+        </div>
+        <div *ngIf="hide" class="flex flex-col justify-center">
+          <app-questionnaire
+            [currentSection]="section"
+            [currentSectionWithoutOptions]="sectionsWithAnswers[i]"
+            (atSummary)="buttonToggler($event)"
+            (adjustWidth)="adjustingWidth($event, i)"
+          ></app-questionnaire>
+        </div>
+        <div class="flex flex-row flex-wrap justify-end mt-5 w-4/5 self-center">
+          <button
+            *ngIf="!nextDisabled"
+            (click)="switchIt(stepper, false)"
+            class="text-lg py-2 px-4 rounded-lg nextButton"
+          >
+            Next
+          </button>
+        </div>
+      </div>
+    </mat-step>
+  </mat-stepper>
 </div>
