All changes leading to New Architecture

--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -9,6 +9,7 @@
       [cardStringControlArray]="cardStringControlArray"
       [skipStringControlArray]="skipStringControlArray"
       (changeStatus)="changeStatus($event)"
+      (filled)="refreshHandler()"
     ></app-section-stepper>
   </div>
   <div *ngIf="!final">
