--- a/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
+++ b/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
@@ -7,6 +7,7 @@
       (ngModel)="(index)"
       (inNext)="nextIsClicked($event)"
       (inPrev)="prevIsClicked($event)"
+      (filled)="refreshHandler()"
     ></app-question>
   </div>
   <div [hidden]="!summary" class="w-4/5">
