--- a/frontend/src/app/components/impl/section-stepper/section-stepper.component.html
+++ b/frontend/src/app/components/impl/section-stepper/section-stepper.component.html
@@ -86,6 +86,7 @@
             [currentSectionWithoutOptions]="sectionsWithAnswers[i]"
             (atSummary)="buttonToggler($event)"
             (adjustWidth)="adjustingWidth($event, i)"
+            (filled)="refreshHandler()"
           ></app-questionnaire>
         </div>
         <div class="flex flex-row flex-wrap justify-end mt-5 w-4/5 self-center">
