--- a/frontend/src/app/components/shared/button/button.component.html
+++ b/frontend/src/app/components/shared/button/button.component.html
@@ -2,14 +2,14 @@
   <button
     class="previousButton text-lg py-2 px-4 rounded-lg"
     *ngIf="previous"
-    (click)="onClick('previous')"
+    (click)="onClickOne()"
   >
-    Prev
+    {{buttonTextOne}}
   </button>
   <button
     class="nextButton text-lg py-2 px-4 rounded-lg"
-    (click)="onClick('next')"
+    (click)="onClickTwo()"
   >
-    Next
+    {{buttonTextTwo}}
   </button>
 </div>
