fixed few errors displayed after linting

--- a/frontend/src/app/components/impl/final-overview/final-overview.component.html
+++ b/frontend/src/app/components/impl/final-overview/final-overview.component.html
@@ -120,8 +120,8 @@
               [previous]="true"
               [buttonTextOne]="'Previous'"
               [buttonTextTwo]="'Next'"
-              (onClickedOne)="prevStep()"
-              (onClickedTwo)="nextStep()"
+              (clickedOne)="prevStep()"
+              (clickedTwo)="nextStep()"
             ></app-button>
           </mat-action-row>
         </mat-expansion-panel>
