--- a/frontend/src/app/components/shared/question/question.component.html
+++ b/frontend/src/app/components/shared/question/question.component.html
@@ -63,8 +63,8 @@
       [previous]="previous"
       [buttonTextOne]="'Prev'"
       [buttonTextTwo]="'Next'"
-      (onClickedOne)="onPrev()"
-      (onClickedTwo)="onNext()"
+      (clickedOne)="onPrev()"
+      (clickedTwo)="onNext()"
     ></app-button>
   </div>
 </div>
