completed performing linting and also font related changes

--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -1,4 +1,4 @@
-<div class="addFont">
+<div class="textLight">
   <div *ngIf="final" class="w-full h-full flex flex-col justify-center py-10">
     <app-section-stepper
       [sections]="sections"
