--- a/frontend/src/app/components/shared/alert-box/alert-box.component.html
+++ b/frontend/src/app/components/shared/alert-box/alert-box.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-3 w-auto h-auto">
-  <h1 mat-dialog-title class="fontDisplay">Confirm Action</h1>
+  <h1 mat-dialog-title class="textRegular">Confirm Action</h1>
   <mat-divider></mat-divider>
   <h2 class="text-2xl text-center pt-3">
     Your stored data will be lost. Do you wish to continue?
