--- a/frontend/src/app/components/container/home/home.component.html
+++ b/frontend/src/app/components/container/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="fullPage">
   <div class="banner flex justify-center m-3">
     <diV class="text-center">
-      <h1 class="heading Montserrat-Regular text-4xl pt-10 md:pt-14 lg:pt-16">
+      <h1 class="heading text-4xl pt-10 md:pt-14 lg:pt-16">
         Want to know the cost of your product?
       </h1>
       <p class="pt-10 text-2xl">
@@ -31,7 +31,7 @@
         }}</i>
       </div>
       <div class="pl-8 flex-initial">
-        <h1 class="heading Montserrat-Regular text-2xl">
+        <h1 class="heading text-2xl">
           <b>{{ section.name }}</b>
         </h1>
         <p class="banner pt-5 max-w-2xl text-xl">
