--- a/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
+++ b/frontend/src/app/components/impl/questionnaire/questionnaire.component.html
@@ -12,12 +12,12 @@
   </div>
   <div [hidden]="!summary" class="w-4/5">
     <div class="flex flex-col justify-start">
-      <p class="text-3xl subText text-center mt-5">
+      <p class="text-3xl subText textRegular text-center mt-5">
         Here's what you've answered
       </p>
       <div>
         <div>
-          <h1 class="text-2xl text-left heading mt-5">
+          <h1 class="text-2xl text-left heading textRegular mt-5">
             {{ currentSection.name }}
           </h1>
         </div>
