--- a/frontend/src/app/components/impl/section-preview-card/section-preview-card.component.html
+++ b/frontend/src/app/components/impl/section-preview-card/section-preview-card.component.html
@@ -2,11 +2,11 @@
   <mat-card
     class="flex flex-col flex-wrap sm:w-4/5 md:w-3/5 lg:w-2/5 cardColoring"
   >
-    <mat-card-title class="text-2xl titleText">{{
+    <mat-card-title class="text-2xl content textRegular">{{
       sectionName
     }}</mat-card-title>
     <mat-card-content>
-      <p class="text-lg content">
+      <p class="text-lg content textLight">
         {{ sectionContent }}
       </p>
     </mat-card-content>
