--- a/frontend/src/app/components/shared/question-overview/question-overview.component.html
+++ b/frontend/src/app/components/shared/question-overview/question-overview.component.html
@@ -1,9 +1,9 @@
-<mat-card class="overviewCard w-min min-w-full rounded-lg">
-  <p class="text-xl">{{ question.q_text }}</p>
+<mat-card class="overviewCard textLight w-min min-w-full rounded-lg">
+  <p class="text-xl">{{ question.questionText }}</p>
   <div class="flex flex-col gap-3 md:flex-row md:flex-wrap md:gap-5">
     <div
       *ngFor="let option of question.options"
-      class="flex flex-wrap answer mt-5 py-2 px-5 rounded-lg md:mt-5 md:px-10"
+      class="flex flex-wrap answer textLight mt-5 py-2 px-5 rounded-lg md:mt-5 md:px-10"
     >
       {{ option.text }}
     </div>
