--- a/frontend/src/app/components/shared/question/question.component.scss
+++ b/frontend/src/app/components/shared/question/question.component.scss
@@ -6,21 +6,17 @@
 }
 .text {
   color: $secondary;
-  font-family: "Montserrat-Regular", $defaultFont;
 }
 .chips {
   color: $secondary;
 }
-.textFont {
-  font-family: "Montserrat-Light", $defaultFont;
-}
-.ifTrue {
+.selected {
   background-color: $primary-light;
   color: $secondary-light;
   font-weight: 600;
   height: fit-content;
 }
-.ifFalse {
+.avoided {
   background-color: $secondary-light;
   color: $secondary;
   font-weight: 200;
