--- a/frontend/src/styles/general-styles.scss
+++ b/frontend/src/styles/general-styles.scss
@@ -10,31 +10,38 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Light", $defaultFont;
+  font-family: $light, $defaultFont;
 }
 .toolTipStyle {
   background-color: $primary !important;
 }
+.textLight{
+  font-family: $light, $defaultFont;
+}
+.textRegular{
+  font-family: $regular, $defaultFont;
+}
+
 .customSnackBar {
   background-color: $secondary-light;
   color: red;
   border-left: 5px solid red;
   border-radius: 2px;
-  font-family: "Montserrat-Regular", $defaultFont;
+  font-family: $regular, $defaultFont;
   font-weight: 600;
 }
 .skipButton {
   min-height: 64px;
   min-width: 160px;
   white-space: pre-wrap !important;
-  font-family: "Montserrat-Regular", $defaultFont;
+  font-family: $regular, $defaultFont;
 }
 .previousButton {
   min-height: 64px;
   min-width: 160px;
   background-color: $secondary-light;
   color: $secondary;
-  font-family: "Montserrat-Light", $defaultFont;
+  font-family: $light, $defaultFont;
   font-weight: 600;
 }
 .previousButton:hover {
@@ -52,7 +59,7 @@ body {
   min-width: 160px;
   background-color: $primary;
   color: $secondary-light;
-  font-family: "Montserrat-Light", $defaultFont;
+  font-family: $light, $defaultFont;
   white-space: pre-wrap !important;
   font-weight: 600;
 }
