--- a/frontend/src/app/components/container/home/home.component.html
+++ b/frontend/src/app/components/container/home/home.component.html
@@ -14,21 +14,23 @@
       </p>
       <p class="text-2xl">Well, you are at the right place.</p>
       <div class="flex flex-row justify-center mt-3">
-        <button
-          class="getStarted font-bold py-2 px-4 rounded-lg mt-5 text-lg"
-          routerLink="/all-sections"
-        >
-          Get started
-        </button>
+        <app-button
+          class="mt-5"
+          [canDisplay]="true"
+          [buttonText]="'Get started'"
+          [buttonClass]="'getStarted'"
+          (clicked)="navigation()"
+        ></app-button>
       </div>
     </diV>
   </div>
   <div class="flex flex-col m-3 mt-10" *ngFor="let section of sections">
     <div class="flex flex-row justify-center m-5">
       <div>
-        <i class="material-icons h-auto w-auto px-10 py-5 rounded-lg btnHome">{{
-          section.icon
-        }}</i>
+        <i
+          class="material-icons h-auto w-auto px-10 py-5 rounded-lg iconHome"
+          >{{ section.icon }}</i
+        >
       </div>
       <div class="pl-8 flex-initial">
         <h1 class="heading text-2xl">
