--- a/frontend/src/app/components/container/home/home.component.scss
+++ b/frontend/src/app/components/container/home/home.component.scss
@@ -11,17 +11,7 @@
   color: $pure-black;
   font-weight: 600;
 }
-.getStarted {
-  background-color: $primary;
-  color: $secondary-light;
-  border-width: 1.5px;
-}
-.getStarted:hover {
-  background-color: $pure-white;
-  border: 1.5px solid $primary;
-  color: $primary;
-}
-.btnHome {
+.iconHome {
   font-size: 30px;
   background-color: $primary;
   color: $secondary-light;
