--- a/frontend/src/app/components/impl/section-preview-card/section-preview-card.component.html
+++ b/frontend/src/app/components/impl/section-preview-card/section-preview-card.component.html
@@ -11,19 +11,21 @@
       </p>
     </mat-card-content>
     <mat-card-actions class="pl-2">
-      <div class="flex flex-row flex-wrap md:space-x-2 lg:space-x-2">
-        <button
-          (click)="onSectionStart()"
-          class="text-lg py-2 px-4 rounded-lg nextButton"
-        >
-          {{ cardStringControl }}
-        </button>
-        <button
-          (click)="onSectionSkip()"
-          class="text-lg py-2 px-4 rounded-lg SkipButton"
-        >
-          {{ skipStringControl }} {{ sectionName }}
-        </button>
+      <div class="flex flex-row flex-wrap gap-2">
+        <div>
+          <app-button
+            [canDisplay]="true"
+            [buttonText]="cardStringControl"
+            [buttonClass]="'nextButton'"
+            (clicked)="onSectionStart()"
+          ></app-button>
+          <app-button
+            [canDisplay]="true"
+            [buttonText]="skipStringControl + ' ' + sectionName"
+            [buttonClass]="'textRegular'"
+            (clicked)="onSectionSkip()"
+          ></app-button>
+        </div>
       </div>
     </mat-card-actions>
   </mat-card>
