--- a/frontend/src/app/components/shared/alert-box/alert-box.component.html
+++ b/frontend/src/app/components/shared/alert-box/alert-box.component.html
@@ -5,13 +5,18 @@
     Your stored data will be lost. Do you wish to continue?
   </h2>
   <div mat-dialog-actions class="flex flex-row justify-end mb-1">
-    <div>
+    <div class="flex flex-row flex-wrap gap-5">
       <app-button
-        [previous]="true"
-        [buttonTextOne]="'Cancel'"
-        [buttonTextTwo]="'Ok'"
-        (clickedOne)="close()"
-        (clickedTwo)="proceed()"
+        [canDisplay]="true"
+        [buttonText]="'Cancel'"
+        [buttonClass]="'previousButton'"
+        (clicked)="close()"
+      ></app-button>
+      <app-button
+        [canDisplay]="true"
+        [buttonText]="'Ok'"
+        [buttonClass]="'nextButton'"
+        (clicked)="proceed()"
       ></app-button>
     </div>
   </div>
