--- a/frontend/src/app/components/shared/summary/summary.component.html
+++ b/frontend/src/app/components/shared/summary/summary.component.html
@@ -1,5 +1,5 @@
 <div
-  *ngIf="isEmpty(questionsWithSelectedOptions)"
+  *ngIf="questionsWithSelectedOptions[0].options.length > 0"
   class="flex flex-col sm:justify-center"
 >
   <div>
